@@ -5,28 +5,12 @@
  */
 package org.zols.datastore.elasticsearch;
 
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.net.URLEncoder;
-import java.util.AbstractMap.SimpleEntry;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
 import cz.jirutka.rsql.parser.ast.Node;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import static java.util.stream.Collectors.toList;
 import org.apache.http.HttpEntity;
 import org.apache.http.HttpHost;
 import org.apache.http.entity.ContentType;
 import org.apache.http.nio.entity.NStringEntity;
 import org.elasticsearch.ElasticsearchStatusException;
-import static org.elasticsearch.action.DocWriteResponse.Result.CREATED;
-import static org.elasticsearch.action.DocWriteResponse.Result.DELETED;
-import static org.elasticsearch.action.DocWriteResponse.Result.UPDATED;
 import org.elasticsearch.action.admin.indices.alias.IndicesAliasesRequest;
 import org.elasticsearch.action.admin.indices.alias.IndicesAliasesRequest.AliasActions;
 import org.elasticsearch.action.admin.indices.alias.get.GetAliasesRequest;
@@ -55,34 +39,52 @@ import org.elasticsearch.cluster.metadata.AliasMetadata;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
-import static org.elasticsearch.index.query.QueryBuilders.termQuery;
-import static org.elasticsearch.index.query.QueryBuilders.termsQuery;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.search.SearchHit;
 import org.elasticsearch.search.SearchHits;
 import org.elasticsearch.search.aggregations.AggregationBuilders;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
-
-import static org.slf4j.LoggerFactory.getLogger;
 import org.zols.datastore.DataStore;
+import org.zols.datastore.DataStoreException;
 import org.zols.datastore.elasticsearch.rsql.ElasticComparisonNodeInterpreter;
 import org.zols.datastore.elasticsearch.rsql.ElasticSearchVisitor;
 import org.zols.datastore.persistence.BrowsableDataStorePersistence;
 import org.zols.datastore.query.AggregatedResults;
 import org.zols.datastore.query.Page;
-import org.zols.datastore.DataStoreException;
 import org.zols.jsonschema.JsonSchema;
+
+import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.AbstractMap.SimpleEntry;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
+import static java.util.stream.Collectors.toList;
+import static org.elasticsearch.action.DocWriteResponse.Result.CREATED;
+import static org.elasticsearch.action.DocWriteResponse.Result.DELETED;
+import static org.elasticsearch.action.DocWriteResponse.Result.UPDATED;
+import static org.elasticsearch.index.query.QueryBuilders.termQuery;
+import static org.elasticsearch.index.query.QueryBuilders.termsQuery;
+import static org.slf4j.LoggerFactory.getLogger;
 import static org.zols.jsonschema.util.JsonSchemaUtil.jsonSchemaForSchema;
 import static org.zols.jsonschema.util.JsonUtil.asMap;
 
 /**
- *
  * Elastic Search Implementation of DataStore
- *
  */
-public class ElasticSearchDataStorePersistence implements BrowsableDataStorePersistence {
+public class ElasticSearchDataStorePersistence
+        implements BrowsableDataStorePersistence {
 
-    private static final org.slf4j.Logger LOGGER = getLogger(ElasticSearchDataStorePersistence.class);
+    private static final org.slf4j.Logger LOGGER =
+            getLogger(ElasticSearchDataStorePersistence.class);
 
     private final RestHighLevelClient client;
 
@@ -98,32 +100,40 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
         this.indexName = "zols";
     }
 
-    public ElasticSearchDataStorePersistence(String indexName, RestHighLevelClient client) {
+    public ElasticSearchDataStorePersistence(final String indexName,
+                                             final RestHighLevelClient client) {
         this.indexName = indexName;
         this.client = client;
     }
 
     @Override
-    public Map<String, Object> create(JsonSchema jsonSchema, Map<String, Object> jsonData) throws DataStoreException {
+    public Map<String, Object> create(final JsonSchema jsonSchema,
+                                      final Map<String, Object> jsonData)
+            throws DataStoreException {
 
         String typeName = getTypeName(jsonSchema);
         String ids = jsonSchema.getIdValuesAsString(jsonData);
         LOGGER.debug("Creating Data for {} with id {}", typeName, ids);
 
         if (ids != null) {
-            IndexRequest indexRequest = new IndexRequest(getIndexName(typeName), typeName, getEncodedId(ids))
-                    .source(jsonData);
+            IndexRequest indexRequest =
+                    new IndexRequest(getIndexName(typeName), typeName,
+                            getEncodedId(ids))
+                            .source(jsonData);
 
             IndexResponse indexResponse;
             try {
-                indexResponse = client.index(indexRequest, RequestOptions.DEFAULT);
+                indexResponse =
+                        client.index(indexRequest, RequestOptions.DEFAULT);
                 if (indexResponse.getResult() == CREATED) {
-                    LOGGER.debug("Created Data for {} with id {}", typeName, ids);
+                    LOGGER.debug("Created Data for {} with id {}", typeName,
+                            ids);
                     refreshIndex(getIndexName(typeName));
                     return read(jsonSchema, jsonSchema.getIdKeys(jsonData));
                 }
             } catch (IOException ex) {
-                throw new DataStoreException("Unable to create data for " + typeName, ex);
+                throw new DataStoreException(
+                        "Unable to create data for " + typeName, ex);
             }
 
         }
@@ -132,7 +142,9 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
     }
 
     @Override
-    public Map<String, Object> read(JsonSchema jsonSchema, SimpleEntry<String, Object>... idValues) throws DataStoreException {
+    public Map<String, Object> read(final JsonSchema jsonSchema,
+                                    final SimpleEntry<String, Object>... idValues)
+            throws DataStoreException {
         String typeName = getTypeName(jsonSchema);
         String ids = jsonSchema.getIdValuesAsString(idValues);
 
@@ -146,55 +158,37 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
             getResponse = client.get(getRequest, RequestOptions.DEFAULT);
             return getResponse.getSource();
         } catch (IOException ex) {
-            throw new DataStoreException("Unable to get data for " + typeName + "with id " + ids, ex);
+            throw new DataStoreException(
+                    "Unable to get data for " + typeName + "with id " + ids,
+                    ex);
         }
     }
 
     @Override
-    public boolean update(JsonSchema jsonSchema,
-            Map<String, Object> jsonData, SimpleEntry<String, Object>... idValues) throws DataStoreException {
-        String typeName = getTypeName(jsonSchema);
-        String ids = jsonSchema.getIdValuesAsString(idValues);
-        LOGGER.debug("Updating Data for {} with id {}", typeName, ids);
-
-        if (ids != null) {
-            IndexRequest indexRequest = new IndexRequest(getIndexName(typeName), typeName, getEncodedId(ids))
-                    .source(jsonData);
-            IndexResponse indexResponse;
-            try {
-                indexResponse = client.index(indexRequest, RequestOptions.DEFAULT);
-                if (indexResponse.getResult() == UPDATED) {
-                    refreshIndex(getIndexName(typeName));
-                    return true;
-                }
-            } catch (IOException ex) {
-                throw new DataStoreException("Unable to create data for " + typeName, ex);
-            }
-
-        }
-        return false;
-    }
-
-    @Override
-    public boolean updatePartially(JsonSchema jsonSchema,
-            Map<String, Object> validatedData, SimpleEntry<String, Object>... idValues)
+    public boolean update(final JsonSchema jsonSchema,
+                          final Map<String, Object> jsonData,
+                          final SimpleEntry<String, Object>... idValues)
             throws DataStoreException {
         String typeName = getTypeName(jsonSchema);
         String ids = jsonSchema.getIdValuesAsString(idValues);
         LOGGER.debug("Updating Data for {} with id {}", typeName, ids);
 
         if (ids != null) {
-            UpdateRequest updateRequest = new UpdateRequest(getIndexName(typeName), getEncodedId(ids));
-            updateRequest.doc(validatedData);
-            UpdateResponse updateResponse;
+            IndexRequest indexRequest =
+                    new IndexRequest(getIndexName(typeName), typeName,
+                            getEncodedId(ids))
+                            .source(jsonData);
+            IndexResponse indexResponse;
             try {
-                updateResponse = client.update(updateRequest,RequestOptions.DEFAULT);
-                if (updateResponse.getResult() == UPDATED) {
+                indexResponse =
+                        client.index(indexRequest, RequestOptions.DEFAULT);
+                if (indexResponse.getResult() == UPDATED) {
                     refreshIndex(getIndexName(typeName));
                     return true;
                 }
             } catch (IOException ex) {
-                throw new DataStoreException("Unable to create data for " + typeName, ex);
+                throw new DataStoreException(
+                        "Unable to create data for " + typeName, ex);
             }
 
         }
@@ -202,8 +196,40 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
     }
 
     @Override
-    public boolean delete(JsonSchema jsonSchema,
-            SimpleEntry<String, Object>... idValues) throws DataStoreException {
+    public boolean updatePartially(final JsonSchema jsonSchema,
+                                   final Map<String, Object> validatedData,
+                                   final SimpleEntry<String, Object>... idValues)
+            throws DataStoreException {
+        String typeName = getTypeName(jsonSchema);
+        String ids = jsonSchema.getIdValuesAsString(idValues);
+        LOGGER.debug("Updating Data for {} with id {}", typeName, ids);
+
+        if (ids != null) {
+            UpdateRequest updateRequest =
+                    new UpdateRequest(getIndexName(typeName),
+                            getEncodedId(ids));
+            updateRequest.doc(validatedData);
+            UpdateResponse updateResponse;
+            try {
+                updateResponse =
+                        client.update(updateRequest, RequestOptions.DEFAULT);
+                if (updateResponse.getResult() == UPDATED) {
+                    refreshIndex(getIndexName(typeName));
+                    return true;
+                }
+            } catch (IOException ex) {
+                throw new DataStoreException(
+                        "Unable to create data for " + typeName, ex);
+            }
+
+        }
+        return false;
+    }
+
+    @Override
+    public boolean delete(final JsonSchema jsonSchema,
+                          final SimpleEntry<String, Object>... idValues)
+            throws DataStoreException {
         String typeName = getTypeName(jsonSchema);
         String ids = jsonSchema.getIdValuesAsString(idValues);
         LOGGER.debug("Deleting Data for {} with id {}", typeName, ids);
@@ -213,24 +239,29 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
 
         DeleteResponse deleteResponse;
         try {
-            deleteResponse = client.delete(deleteRequest,RequestOptions.DEFAULT);
+            deleteResponse =
+                    client.delete(deleteRequest, RequestOptions.DEFAULT);
             return (deleteResponse.getResult() == DELETED);
         } catch (IOException ex) {
-            throw new DataStoreException("Unable to delete data for " + typeName + "with id " + ids, ex);
+            throw new DataStoreException(
+                    "Unable to delete data for " + typeName + "with id " + ids,
+                    ex);
         }
 
     }
 
-    private String getTypeName(JsonSchema jsonSchema) {
+    private String getTypeName(final JsonSchema jsonSchema) {
         return jsonSchema.getJSONPropertyName(jsonSchema.getRoot().getId());
     }
 
-    private Object getIdValue(JsonSchema jsonSchema, Map<String, Object> jsonData) {
+    private Object getIdValue(final JsonSchema jsonSchema,
+                              final Map<String, Object> jsonData) {
         return jsonSchema == null ? null : jsonSchema.getIdValues(jsonData)[0];
     }
 
     @Override
-    public boolean delete(JsonSchema jsonSchema, Node queryNode) throws DataStoreException {
+    public boolean delete(final JsonSchema jsonSchema, final Node queryNode)
+            throws DataStoreException {
 
         String typeName = getTypeName(jsonSchema);
         String indexName2 = getIndexName(typeName);
@@ -239,17 +270,24 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
 
             try {
                 // Patch for Solving delete by query conflicts
-                client.getLowLevelClient().performRequest(new Request("POST", "/" + indexName2 + "/_refresh"));
-                HttpEntity entity = new NStringEntity("{" + "\"query\":" + builder.toString() + "}", ContentType.APPLICATION_JSON);
-                Request req = new Request("POST", "/" + indexName2 + "/" + typeName + "/_delete_by_query?scroll_size=1");
+                client.getLowLevelClient().performRequest(
+                        new Request("POST", "/" + indexName2 + "/_refresh"));
+                HttpEntity entity = new NStringEntity(
+                        "{" + "\"query\":" + builder + "}",
+                        ContentType.APPLICATION_JSON);
+                Request req = new Request("POST",
+                        "/" + indexName2 + "/" + typeName +
+                                "/_delete_by_query?scroll_size=1");
                 req.setEntity(entity);
                 client.getLowLevelClient()
                         .performRequest(req);
-                client.getLowLevelClient().performRequest(new Request("POST", "/" + indexName2 + "/_refresh"));
+                client.getLowLevelClient().performRequest(
+                        new Request("POST", "/" + indexName2 + "/_refresh"));
                 refreshIndex(indexName2);
                 return true;
             } catch (IOException ex) {
-                throw new DataStoreException("Unable to delete " + indexName2, ex);
+                throw new DataStoreException("Unable to delete " + indexName2,
+                        ex);
             }
         }
 
@@ -257,11 +295,14 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
     }
 
     @Override
-    public List<Map<String, Object>> list(JsonSchema jsonSchema, Node queryNode) throws DataStoreException {
+    public List<Map<String, Object>> list(final JsonSchema jsonSchema,
+                                          final Node queryNode)
+            throws DataStoreException {
         String typeName = getTypeName(jsonSchema);
 
         LOGGER.debug("Listing Data for {} ", typeName);
-        SearchRequest searchRequest = new SearchRequest(getIndexName(typeName));
+        SearchRequest searchRequest =
+                new SearchRequest(getIndexName(typeName));
         searchRequest.types(typeName);
 
         SearchSourceBuilder sourceBuilder = new SearchSourceBuilder();
@@ -269,12 +310,14 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
         searchRequest.source(sourceBuilder);
 
         try {
-            SearchResponse searchResponse = client.search(searchRequest, RequestOptions.DEFAULT);
+            SearchResponse searchResponse =
+                    client.search(searchRequest, RequestOptions.DEFAULT);
 
             SearchHits hits = searchResponse.getHits();
             long totalHits = hits.getTotalHits().value;
             if (totalHits != 0) {
-                List<Map<String, Object>> list = new ArrayList<>((int) totalHits);
+                List<Map<String, Object>> list =
+                        new ArrayList<>((int) totalHits);
                 for (SearchHit hit : hits.getHits()) {
                     list.add(hit.getSourceAsMap());
                 }
@@ -285,20 +328,27 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
             if (ex.status() == RestStatus.NOT_FOUND) {
                 return null;
             } else {
-                throw new DataStoreException("Unable to list data for " + typeName, ex);
+                throw new DataStoreException(
+                        "Unable to list data for " + typeName, ex);
             }
         } catch (IOException ex) {
-            throw new DataStoreException("Unable to list data for " + typeName, ex);
+            throw new DataStoreException("Unable to list data for " + typeName,
+                    ex);
         }
         return null;
     }
 
     @Override
-    public Page<Map<String, Object>> list(JsonSchema jsonSchema, Node queryNode, Integer pageNumber, Integer pageSize) throws DataStoreException {
+    public Page<Map<String, Object>> list(final JsonSchema jsonSchema,
+                                          final Node queryNode, final Integer pageNumber,
+                                          final Integer pageSize)
+            throws DataStoreException {
         String typeName = getTypeName(jsonSchema);
 
-        LOGGER.debug("Listing Data for {} page {} size {}", typeName, pageNumber, pageSize);
-        SearchRequest searchRequest = new SearchRequest(getIndexName(typeName));
+        LOGGER.debug("Listing Data for {} page {} size {}", typeName,
+                pageNumber, pageSize);
+        SearchRequest searchRequest =
+                new SearchRequest(getIndexName(typeName));
         searchRequest.types(typeName);
 
         SearchSourceBuilder sourceBuilder = new SearchSourceBuilder();
@@ -308,7 +358,8 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
         searchRequest.source(sourceBuilder);
 
         try {
-            SearchResponse searchResponse = client.search(searchRequest,RequestOptions.DEFAULT);
+            SearchResponse searchResponse =
+                    client.search(searchRequest, RequestOptions.DEFAULT);
             SearchHits hits = searchResponse.getHits();
             long totalHits = hits.getTotalHits().value;
             if (totalHits != 0) {
@@ -323,22 +374,27 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
             if (ex.status() == RestStatus.NOT_FOUND) {
                 return null;
             } else {
-                throw new DataStoreException("Unable to list data for " + typeName, ex);
+                throw new DataStoreException(
+                        "Unable to list data for " + typeName, ex);
             }
         } catch (IOException ex) {
-            throw new DataStoreException("Unable to list data for " + typeName, ex);
+            throw new DataStoreException("Unable to list data for " + typeName,
+                    ex);
         }
         return null;
     }
 
-    private QueryBuilder getQueryBuilder(JsonSchema jsonSchema, Node queryNode) throws DataStoreException {
+    private QueryBuilder getQueryBuilder(final JsonSchema jsonSchema, final Node queryNode)
+            throws DataStoreException {
 
         BoolQueryBuilder bool_builder = QueryBuilders.boolQuery();
         if (queryNode != null) {
-            bool_builder.must(queryNode.accept(new ElasticSearchVisitor(new ElasticComparisonNodeInterpreter())));
+            bool_builder.must(queryNode.accept(new ElasticSearchVisitor(
+                    new ElasticComparisonNodeInterpreter())));
         }
         if (jsonSchemaForSchema() != jsonSchema) {
-            List<String> implementations = dataStore.getImplementationsOf(jsonSchema);
+            List<String> implementations =
+                    dataStore.getImplementationsOf(jsonSchema);
             if (implementations == null || implementations.isEmpty()) {
                 bool_builder.must(termQuery("$type", jsonSchema.getId()));
 
@@ -352,28 +408,29 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
         return bool_builder;
     }
 
-    private String getEncodedId(Object ids) {
-        try {
-            return ids == null ? null : URLEncoder.encode(ids.toString(), "UTF-8");
-        } catch (UnsupportedEncodingException ex) {
-            Logger.getLogger(ElasticSearchDataStorePersistence.class.getName()).log(Level.SEVERE, null, ex);
-        }
-        return null;
+    private String getEncodedId(final Object ids) {
+        return ids == null ? null :
+                URLEncoder.encode(ids.toString(), StandardCharsets.UTF_8);
     }
 
-    private String getIndexName(String typeName) {
+    private String getIndexName(final String typeName) {
         return indexName + "_" + typeName;
     }
 
     @Override
-    public AggregatedResults browse(JsonSchema schema, String keyword, Node queryNode, Integer pageNumber, Integer pageSize) throws DataStoreException {
+    public AggregatedResults browse(final JsonSchema schema, final String keyword,
+                                    final Node queryNode, final Integer pageNumber,
+                                    final Integer pageSize)
+            throws DataStoreException {
         AggregatedResults aggregatedResults = null;
         if (schema != null) {
 //            if (keyword != null) {
 //                query.addFilter(new Filter(Filter.Operator.FULL_TEXT_SEARCH, keyword + "*"));
 //            }
-            Map<String, Object> searchResponse = searchResponse(schema, queryNode, pageNumber, pageSize);
-            Page<Map<String, Object>> resultsOf = pageOf(searchResponse, pageNumber, pageSize);
+            Map<String, Object> searchResponse =
+                    searchResponse(schema, queryNode, pageNumber, pageSize);
+            Page<Map<String, Object>> resultsOf =
+                    pageOf(searchResponse, pageNumber, pageSize);
             if (resultsOf != null) {
                 aggregatedResults = new AggregatedResults();
                 aggregatedResults.setPage(resultsOf);
@@ -383,10 +440,12 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
         return aggregatedResults;
     }
 
-    private List<Map<String, Object>> bucketsOf(Map<String, Object> searchResponse) {
+    private List<Map<String, Object>> bucketsOf(
+            final Map<String, Object> searchResponse) {
         List<Map<String, Object>> buckets = null;
         if (searchResponse != null) {
-            Map<String, Object> aggregations = (Map<String, Object>) searchResponse.get("aggregations");
+            Map<String, Object> aggregations =
+                    (Map<String, Object>) searchResponse.get("aggregations");
             if (aggregations != null) {
                 Map<String, Object> bucket;
                 Map<String, Object> bucketItem;
@@ -398,31 +457,53 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
                 String aggregationName;
                 for (Map.Entry<String, Object> entrySet : aggregations.entrySet()) {
 
-                    aggregationName = entrySet.getKey().substring(entrySet.getKey().indexOf("#") + 1);
+                    aggregationName = entrySet.getKey()
+                            .substring(entrySet.getKey().indexOf("#") + 1);
                     if (!aggregationName.startsWith("max_")) {
                         bucket = new HashMap<>();
-                        Object title = ((Map<String, Object>) ((Map<String, Object>) aggregations.get(entrySet.getKey())).get("meta")).get("title");
+                        Object title =
+                                ((Map<String, Object>) ((Map<String, Object>) aggregations.get(
+                                        entrySet.getKey())).get("meta")).get(
+                                        "title");
                         if (aggregationName.startsWith("min_")) {
-                            bucket.put("name", aggregationName.replaceAll("min_", ""));
+                            bucket.put("name",
+                                    aggregationName.replaceAll("min_", ""));
                             bucket.put("type", "minmax");
                             bucketItem = new HashMap<>();
-                            bucketItem.put("min", ((Map<String, Object>) aggregations.get(entrySet.getKey())).get("value"));
-                            bucketItem.put("max", ((Map<String, Object>) aggregations.get(entrySet.getKey().replaceAll("min_", "max_").replaceAll("min#", "max#"))).get("value"));
-                            bucket.put("title", title == null ? bucket.get("name") : title);
+                            bucketItem.put("min",
+                                    ((Map<String, Object>) aggregations.get(
+                                            entrySet.getKey())).get("value"));
+                            bucketItem.put("max",
+                                    ((Map<String, Object>) aggregations.get(
+                                            entrySet.getKey()
+                                                    .replaceAll("min_", "max_")
+                                                    .replaceAll("min#",
+                                                            "max#"))).get(
+                                            "value"));
+                            bucket.put("title",
+                                    title == null ? bucket.get("name") :
+                                            title);
                             bucket.put("item", bucketItem);
                         } else if (!aggregationName.startsWith("max_")) {
                             bucket.put("name", aggregationName);
                             bucket.put("type", "term");
-                            bucketsMaps = (List<Map<String, Object>>) ((Map<String, Object>) entrySet.getValue()).get("buckets");
+                            bucketsMaps =
+                                    (List<Map<String, Object>>) ((Map<String, Object>) entrySet.getValue()).get(
+                                            "buckets");
                             bucketItems = new ArrayList<>();
                             for (Map<String, Object> bucketsMap : bucketsMaps) {
                                 bucketItem = new HashMap<>();
-                                bucketItem.put("name", bucketsMap.get("key").toString());
-                                bucketItem.put("label", bucketsMap.get("key").toString());
-                                bucketItem.put("count", (Integer) bucketsMap.get("doc_count"));
+                                bucketItem.put("name",
+                                        bucketsMap.get("key").toString());
+                                bucketItem.put("label",
+                                        bucketsMap.get("key").toString());
+                                bucketItem.put("count",
+                                        bucketsMap.get("doc_count"));
                                 bucketItems.add(bucketItem);
                             }
-                            bucket.put("title", title == null ? bucket.get("name") : title);
+                            bucket.put("title",
+                                    title == null ? bucket.get("name") :
+                                            title);
                             bucket.put("items", bucketItems);
                         }
                         buckets.add(bucket);
@@ -435,76 +516,95 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
         return buckets;
     }
 
-    private Page<Map<String, Object>> pageOf(Map<String, Object> searchResponse, Integer pageNumber,
-            Integer pageSize) {
+    private Page<Map<String, Object>> pageOf(
+            final Map<String, Object> searchResponse, final Integer pageNumber,
+            final Integer pageSize) {
         Page<Map<String, Object>> page = null;
         List<Map<String, Object>> list = resultsOf(searchResponse);
         if (list != null) {
-            Integer noOfRecords = (Integer) ((Map<String, Object>)((Map<String, Object>) searchResponse.get("hits")).get("total")).get("value");
-            page = new Page(pageNumber, pageSize, Long.valueOf(noOfRecords), list);
+            Integer noOfRecords =
+                    (Integer) ((Map<String, Object>) ((Map<String, Object>) searchResponse.get(
+                            "hits")).get("total")).get("value");
+            page = new Page(pageNumber, pageSize, Long.valueOf(noOfRecords),
+                    list);
         }
         return page;
     }
 
-    private List<Map<String, Object>> resultsOf(Map<String, Object> searchResponse) {
+    private List<Map<String, Object>> resultsOf(
+            final Map<String, Object> searchResponse) {
         List<Map<String, Object>> list = null;
         if (searchResponse != null) {
-            Integer noOfRecords = (Integer) ((Map<String, Object>)((Map<String, Object>) searchResponse.get("hits")).get("total")).get("value");
+            Integer noOfRecords =
+                    (Integer) ((Map<String, Object>) ((Map<String, Object>) searchResponse.get(
+                            "hits")).get("total")).get("value");
             if (0 != noOfRecords) {
-                List<Map<String, Object>> recordsMapList = (List<Map<String, Object>>) ((Map<String, Object>) searchResponse.get("hits")).get("hits");
+                List<Map<String, Object>> recordsMapList =
+                        (List<Map<String, Object>>) ((Map<String, Object>) searchResponse.get(
+                                "hits")).get("hits");
                 list = new ArrayList<>(recordsMapList.size());
                 for (Map<String, Object> recordsMapList1 : recordsMapList) {
-                    list.add((Map<String, Object>) recordsMapList1.get("_source"));
+                    list.add((Map<String, Object>) recordsMapList1.get(
+                            "_source"));
                 }
             }
         }
         return list;
     }
 
-    private void addAggregations(JsonSchema jsonSchema, SearchSourceBuilder searchRequestBuilder) {
+    private void addAggregations(final JsonSchema jsonSchema,
+                                 final SearchSourceBuilder searchRequestBuilder) {
         HashMap<String, Object> map = new HashMap<>();
         map.put("title", "Types");
-        searchRequestBuilder.aggregation(AggregationBuilders.terms("types").setMetadata(map).field("$type.keyword"));
-        jsonSchema.getProperties().entrySet().parallelStream().forEach(entry -> {
-            String filter = (String) entry.getValue().get("filter");
-            if (filter != null) {
-                String title = entry.getKey();
-                if (entry.getValue().get("title") != null) {
-                    title = entry.getValue().get("title").toString();
-                }
-                switch (filter) {
-                    case "minmax":
-                        searchRequestBuilder
-                                .aggregation(AggregationBuilders
-                                        .min("min_" + entry.getKey())
-                                        .setMetadata(entry.getValue())
-                                        .field(entry.getKey()))
-                                .aggregation(AggregationBuilders
-                                        .max("max_" + entry.getKey())
-                                        .setMetadata(entry.getValue())
-                                        .field(entry.getKey()));
-                        break;
-                    case "term":
-                        searchRequestBuilder
-                                .aggregation(AggregationBuilders
-                                        .terms(entry.getKey())
-                                        .setMetadata(entry.getValue())
-                                        .field(entry.getKey() + ".keyword"));
+        searchRequestBuilder.aggregation(
+                AggregationBuilders.terms("types").setMetadata(map)
+                        .field("$type.keyword"));
+        jsonSchema.getProperties().entrySet().parallelStream()
+                .forEach(entry -> {
+                    String filter = (String) entry.getValue().get("filter");
+                    if (filter != null) {
+                        String title = entry.getKey();
+                        if (entry.getValue().get("title") != null) {
+                            title = entry.getValue().get("title").toString();
+                        }
+                        switch (filter) {
+                            case "minmax":
+                                searchRequestBuilder
+                                        .aggregation(AggregationBuilders
+                                                .min("min_" + entry.getKey())
+                                                .setMetadata(entry.getValue())
+                                                .field(entry.getKey()))
+                                        .aggregation(AggregationBuilders
+                                                .max("max_" + entry.getKey())
+                                                .setMetadata(entry.getValue())
+                                                .field(entry.getKey()));
+                                break;
+                            case "term":
+                                searchRequestBuilder
+                                        .aggregation(AggregationBuilders
+                                                .terms(entry.getKey())
+                                                .setMetadata(entry.getValue())
+                                                .field(entry.getKey() +
+                                                        ".keyword"));
 
-                        break;
-                }
-            }
+                                break;
+                        }
+                    }
 
-        });
+                });
 
     }
 
-    public Map<String, Object> searchResponse(JsonSchema jsonSchema,
-            Node queryNode, Integer pageNumber, Integer pageSize) throws DataStoreException {
+    public Map<String, Object> searchResponse(final JsonSchema jsonSchema,
+                                              final Node queryNode,
+                                              final Integer pageNumber,
+                                              final Integer pageSize)
+            throws DataStoreException {
 
         String typeName = getTypeName(jsonSchema);
 
-        SearchRequest searchRequest = new SearchRequest(getIndexName(typeName));
+        SearchRequest searchRequest =
+                new SearchRequest(getIndexName(typeName));
         searchRequest.types(typeName);
 
         SearchSourceBuilder sourceBuilder = new SearchSourceBuilder();
@@ -515,24 +615,27 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
 
         searchRequest.source(sourceBuilder);
 
-        LOGGER.debug("Executing elastic search query {}", searchRequest.toString());
+        LOGGER.debug("Executing elastic search query {}",
+                searchRequest);
 
         try {
-            SearchResponse searchResponse = client.search(searchRequest,RequestOptions.DEFAULT);
+            SearchResponse searchResponse =
+                    client.search(searchRequest, RequestOptions.DEFAULT);
             return asMap(searchResponse.toString());
         } catch (IOException ex) {
-            throw new DataStoreException("Unable to browse data for " + typeName, ex);
+            throw new DataStoreException(
+                    "Unable to browse data for " + typeName, ex);
         }
 
     }
 
-    private void refreshIndex(String indexName) throws IOException {
+    private void refreshIndex(final String indexName) throws IOException {
         RefreshRequest request = new RefreshRequest(indexName);
         client.indices().refresh(request, RequestOptions.DEFAULT);
     }
 
     @Override
-    public void onNewSchema(JsonSchema jsonSchema) throws DataStoreException {
+    public void onNewSchema(final JsonSchema jsonSchema) throws DataStoreException {
         if (jsonSchema.isRoot()) {
             String typeName = jsonSchema.getId();
             String typeIndexName = getIndexName(typeName);
@@ -543,33 +646,44 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
                 GetIndexRequest request = new GetIndexRequest();
                 request.indices(originalTypeIndexName);
 
-                if (!client.indices().exists(request, RequestOptions.DEFAULT)) {
-                    CreateIndexRequest createIndexRequest = new CreateIndexRequest(originalTypeIndexName);
-                    CreateIndexResponse createIndexResponse = client.indices().create(createIndexRequest, RequestOptions.DEFAULT);
+                if (!client.indices()
+                        .exists(request, RequestOptions.DEFAULT)) {
+                    CreateIndexRequest createIndexRequest =
+                            new CreateIndexRequest(originalTypeIndexName);
+                    CreateIndexResponse createIndexResponse = client.indices()
+                            .create(createIndexRequest,
+                                    RequestOptions.DEFAULT);
 
                     if (createIndexResponse.isAcknowledged()) {
-                        IndicesAliasesRequest aliasesRequest = new IndicesAliasesRequest();
+                        IndicesAliasesRequest aliasesRequest =
+                                new IndicesAliasesRequest();
                         AliasActions aliasAction
                                 = new AliasActions(AliasActions.Type.ADD)
-                                        .index(originalTypeIndexName)
-                                        .alias(typeIndexName);
+                                .index(originalTypeIndexName)
+                                .alias(typeIndexName);
                         aliasesRequest.addAliasAction(aliasAction);
                         AcknowledgedResponse indicesAliasesResponse
-                                = client.indices().updateAliases(aliasesRequest, RequestOptions.DEFAULT);
+                                = client.indices()
+                                .updateAliases(aliasesRequest,
+                                        RequestOptions.DEFAULT);
                     }
                 }
 
             } catch (IOException ex) {
-                throw new DataStoreException("Unable to create index for " + typeName, ex);
+                throw new DataStoreException(
+                        "Unable to create index for " + typeName, ex);
             }
 
         }
     }
 
     @Override
-    public void onUpdateSchema(JsonSchema oldSchema, JsonSchema newSchema) throws DataStoreException {
-        Map<String, Map<String, Object>> oldPropertiesMap = oldSchema.getProperties();
-        Map<String, Map<String, Object>> newPropertiesMap = newSchema.getProperties();
+    public void onUpdateSchema(final JsonSchema oldSchema, final JsonSchema newSchema)
+            throws DataStoreException {
+        Map<String, Map<String, Object>> oldPropertiesMap =
+                oldSchema.getProperties();
+        Map<String, Map<String, Object>> newPropertiesMap =
+                newSchema.getProperties();
         if (oldPropertiesMap != null) {
             List<String> removedFields = oldPropertiesMap.keySet().stream()
                     .filter(key -> {
@@ -581,9 +695,11 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
 
                     String typeIndexAliasName = getIndexName(typeName);
                     String typeIndexName = findIndexName(typeIndexAliasName);
-                    String newTypeIndexName = typeIndexAliasName + System.currentTimeMillis();
+                    String newTypeIndexName =
+                            typeIndexAliasName + System.currentTimeMillis();
 
-                    Map<String, String> params = Collections.singletonMap("pretty", "true");
+                    Map<String, String> params =
+                            Collections.singletonMap("pretty", "true");
                     String reindexRequest = "{\n"
                             + "  \"source\": {\n"
                             + "    \"index\": "
@@ -591,7 +707,7 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
                             + ",\n"
                             + "    \"_source\": {\n"
                             + "        \"excludes\": "
-                            + removedFields.toString()
+                            + removedFields
                             + "    }\n"
                             + "  },\n"
                             + "  \"dest\": {\n"
@@ -600,7 +716,8 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
                             + "\"\n"
                             + "  }\n"
                             + "}";
-                    HttpEntity entity = new NStringEntity(reindexRequest, ContentType.APPLICATION_JSON);
+                    HttpEntity entity = new NStringEntity(reindexRequest,
+                            ContentType.APPLICATION_JSON);
 
                     Request req = new Request("POST", "/_reindex");
 
@@ -624,7 +741,8 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
                             + "\" } }\n"
                             + "    ]\n"
                             + "}";
-                    entity = new NStringEntity(switchReq, ContentType.APPLICATION_JSON);
+                    entity = new NStringEntity(switchReq,
+                            ContentType.APPLICATION_JSON);
 
                     req = new Request("POST", "/_aliases");
 
@@ -633,19 +751,23 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
                     client.getLowLevelClient()
                             .performRequest(req);
 
-                    client.getLowLevelClient().performRequest(new Request("DELETE", "/" + typeIndexName));
+                    client.getLowLevelClient().performRequest(
+                            new Request("DELETE", "/" + typeIndexName));
 
                 } catch (IOException ex) {
-                    throw new DataStoreException("Unable to switch alias index for " + typeName, ex);
+                    throw new DataStoreException(
+                            "Unable to switch alias index for " + typeName,
+                            ex);
                 }
             }
         }
     }
 
-    private String findIndexName(String aliasName) throws IOException {
+    private String findIndexName(final String aliasName) throws IOException {
         final StringBuilder index = new StringBuilder();
         GetAliasesRequest requestWithAlias = new GetAliasesRequest(aliasName);
-        GetAliasesResponse response = client.indices().getAlias(requestWithAlias, RequestOptions.DEFAULT);
+        GetAliasesResponse response = client.indices()
+                .getAlias(requestWithAlias, RequestOptions.DEFAULT);
         Map<String, Set<AliasMetadata>> aliasMap = response.getAliases();
 
         aliasMap.forEach((indexName2, md) -> {
@@ -658,7 +780,8 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
     }
 
     @Override
-    public void onDeleteSchema(JsonSchema jsonSchema) throws DataStoreException {
+    public void onDeleteSchema(final JsonSchema jsonSchema)
+            throws DataStoreException {
         // If root delete the index
         if (jsonSchema.isRoot()) {
             String typeName = getTypeName(jsonSchema);
@@ -666,16 +789,19 @@ public class ElasticSearchDataStorePersistence implements BrowsableDataStorePers
 
             try {
                 String typeIndexName = findIndexName(indexAliasName);
-                DeleteIndexRequest request = new DeleteIndexRequest(typeIndexName);
-                AcknowledgedResponse deleteIndexResponse = client.indices().delete(request, RequestOptions.DEFAULT);
+                DeleteIndexRequest request =
+                        new DeleteIndexRequest(typeIndexName);
+                AcknowledgedResponse deleteIndexResponse = client.indices()
+                        .delete(request, RequestOptions.DEFAULT);
             } catch (IOException ex) {
-                throw new DataStoreException("Unable to delete index for " + typeName, ex);
+                throw new DataStoreException(
+                        "Unable to delete index for " + typeName, ex);
             }
         }
     }
 
     @Override
-    public void onIntialize(DataStore dataStore) {
+    public void onIntialize(final DataStore dataStore) {
         this.dataStore = dataStore;
     }
 
